cambio en footer con h4

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1> Clase github</h1>
+    </header>
+    <main>
+        <section>
+            <h2> a estudiar git</h2>
+        </section>
+        <section>
+            <h2> estamos trabajando con una rama nueva asdasdasdasdasdasdasd</h2>
+        </section>
+    </main>
+    <footer>
+        <h4> sufriendo con git</h4>
+    </footer>
 </body>
 </html>
